resolved merge conflict

--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 	<body>
 		<h1>Hello there</h1>
 		<h2> I've just edited this content by adding this content</h2>
+		<h2>The world is your oyster</h2>
 	</body>
 
 </html>
